Add Forgot password & Reset password page

--- a/fligo/src/components/GlobalStyles/GlobalStyles.scss
+++ b/fligo/src/components/GlobalStyles/GlobalStyles.scss
@@ -17,6 +17,7 @@ html {
     --blue-secondary-color: #0E185F;
     --blue-tertiary-color: #2FA4FF;
     --white-color: #FFFFFF;
+    --grey-color: #c4c4c470;
 }
 
 body {
