--- a/fligo/src/components/GlobalStyles/GlobalStyles.scss
+++ b/fligo/src/components/GlobalStyles/GlobalStyles.scss
@@ -18,6 +18,7 @@ html {
     --blue-tertiary-color: #2FA4FF;
     --white-color: #FFFFFF;
     --grey-color: #c4c4c470;
+    --black-color: #000000;
 }
 
 body {
